--- a/mapa.html
+++ b/mapa.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div id="map" style="z-index:0">
-        <img id="norte" src="img/norte.png" style="z-index:9999">
+        <img id="norte" src="img/norte2.png" style="z-index:9999">
         
         <script>
                 var legend = L.control({position: "bottomleft"});
