--- a/index2.html
+++ b/index2.html
@@ -4,95 +4,42 @@
     <meta charset="UTF-8">
     <!-- Descripcion de la pagina -->
     <meta name="description" content="Esta es la biografía de Andrés Vargas">
+    <!-- Vista de compatibilidad-->        
+    <meta http-equiv="X-UAV-Compatible" content = "IE=edge">
     <meta name="viewport" content ="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Jorge Andres Vargas">
-
-    <!-- CDNS -->
-
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
-    <!-- iconos redes -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <!-- leaflet -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+       <!-- leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css">
     
     <!-- Estilo para el mapa -->
     <link rel="stylesheet" href="style.css">
-    <!-- Minimapa -->
-    <link rel ="stylesheet" type="text/css" href="">
+
+
+    <link rel ="stylesheet" type="text/css" href="Leaflet-MiniMap-master/dist/Control.MiniMap.min.css">
+    <!-- Control mouse -->
+
+
+    <link rel="stylesheet" type="text/css" href="control-window/src/L.Control.Window.css">
 
     <title>Mapa comuna 22</title>
 
+
+    <!-- plugin jquery -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>  
+	
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
-    <script src="" type="text/javascript"></script>
-    <script src="js/minimapa.js" type="text/javascript"></script>
+    <script src="control-window/src/L.Control.Window.js" type="text/javascript"></script>
 
   </head>
   <body>
-    <br>
-    <div>
-        <div class="row featurette px-2">
-            <div class="col-md-3 order-md-2">
-            <h2 class="featurette-heading">
-                Mapa
-                <span class="text-muted"> ubicaciónes</span>
-            </h2>
-            <p class="lead" style="text-align: justify">
-                <br>
-                El mapa que aquí se presenta contiene información puntual de algunas ubicaciones que ya se mencionaron anteriormente como lo son lugar de nacimiento, ubicación actual y el lugar donde he pasado la mayor parte de mi vida que es el lugar donde vive mi familia, este mapa se realizó con el fin de mostrar de cierta manera dar un contexto espacial a algunas ubicaciones en las cuales he pasado una parte considerable de mi vida. 
-            </p>
-            </div>
-            <div class="col-md-9 order-md-2">
-            <div id="map"></div>
-            <script src="js/mapa.js"></script>
-            <script>
-
-                var legend = L.control({position: "bottomleft"});
-                legend.onAdd = function(map) {
-                var div = L.DomUtil.create("div", "legend");
-                div.innerHTML = 
-                '<p><b>GEOPREDIOS</b></p><hr>' +
-                '<li>Camila Carmona </li>' +
-                '<li>Andrés Vargas </li>' +
-                '</ul></p>' +
-                'Creado con Leaflet <br>' +
-                '<img src="images/legend.png">';
-                return div;
-                };
-            L.control.scale().addTo(map);
-            L.control.layers({map}).addTo(map);
-            legend.addTo(map)
-            L.Control.geocoder().addTo(map);
+    <div id="map" style="z-index:0">
+        <img id="norte" src="img/norte2.png" style="z-index:9999">
+        <script src="map2.js" style="z-index:0"></script>
         
-            </script>
-            </div>
-        </div>
     </div>
-    <br>
-    <hr class="featurette-divider">
-    <br>
-              <!-- footer -->
-    <footer class="bg-dark text-white">
-        <div class="row">
-            <div class="col-sm-6">
-                <a href="https://www.univalle.edu.co" target="_blank">
-                    <img src="img/Univalle.png"  alt="univalle" class="w-25">
-                </a>
-            </div>
-            <div class="col-sm-6">
-                <h2 class="text-muted">Desarrollado por:</h2>
-                <p class="text-muted"><em>Correo: jorge.andres.vargas@correounivalle.edu.co</em></p>
-                <h3 class="text-muted">Sígueme en redes sociales:</h3>
-                <a href="https://www.facebook.com/J.andres.vargas.perez" target="_blank" class="text-white mr-3"><i class="fab fa-facebook fs-1"></i></a>
-                <a href="https://twitter.com/___jorge_andres" target="_blank" class="text-white mr-3"><i class="fab fa-twitter fs-1"></i></a>
-                <a href="https://www.instagram.com/___andres_vargas/" target="_blank" class="text-white"><i class="fab fa-instagram fs-1"></i></a>
-            </div>
-        </div>
-        <br>
-    </footer> 
-    <br>      
+
   </body>
 </html>
 
