--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </p>
             </div>
             <div class="col-md-9 order-md-2">
-                <script src="map2.js" style="z-index:0"></script>
+                <script src="js/map.js" style="z-index:0"></script>
                     <!-- Minimapa -->
                 <link rel="stylesheet" href="minimap/Control.MiniMap.css" />
                 <script src="minimap/Control.MiniMap.js" type="text/javascript"></script>
