--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
 
     <!-- Complemento Leaflet.heat -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js"></script>
+    <script src="Heatmap/leaflet-heat.js"></script>
 
     <!-- Enlace a kit de Font Awesome -->
     <script src="https://kit.fontawesome.com/41b9a1bfbd.js" crossorigin="anonymous"></script>
@@ -27,8 +27,6 @@
 </head>
 <body>
     <h1>Ejemplo de mapa Leaflet de calor ("heat map")</h1>     
-
-    <p>
     
     <!-- Elemento div para contener el mapa Leaflet -->
     <div id="map" style="z-index: 0"></div>
