--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
 
 
-    <link rel ="stylesheet" type="text/css" href="Leaflet-MiniMap-master/dist/Control.MiniMap.min.css">
+    <!-- <link rel ="stylesheet" type="text/css" href="Leaflet-MiniMap-master/Control.MiniMap.min.css">-->
     <!-- Control mouse -->
 
 
