--- a/index3.html
+++ b/index3.html
@@ -76,8 +76,8 @@
             <div class="col-md-9 order-md-2">
                 <script src="map2.js" style="z-index:0"></script>
                     <!-- Minimapa -->
-                <link rel="stylesheet" href="minimap/Control.MiniMap.css" />
-                <script src="minimap/Control.MiniMap.js" type="text/javascript"></script>
+                <link rel="stylesheet" href="Leaflet-MiniMap-master/Control.MiniMap.css" />
+                <script src="Leaflet-MiniMap-master/Control.MiniMap.js" type="text/javascript"></script>
                 <script src="js/minimap.js" type="text/javascript"></script>
                 <script>
                     var legend = L.control({position: "bottomleft"});
