--- a/index4.html
+++ b/index4.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
 
     <!-- Complemento Leaflet.heat -->
-    <script src="Heatmap/leaflet-heat.js"></script>
+    <script src="Heatmap/heatmap.js"></script>
 
     <!-- Enlace a kit de Font Awesome -->
     <script src="https://kit.fontawesome.com/41b9a1bfbd.js" crossorigin="anonymous"></script>
