--- a/index3.html
+++ b/index3.html
@@ -41,6 +41,9 @@
 
     <script src="https://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.css" />    
+
   </head>
   <body>
     <div id="map" style="z-index:0">
@@ -77,7 +80,7 @@
             </p>
             </div>
             <div class="col-md-9 order-md-2">
-                <script src="map2.js" style="z-index:0"></script>
+                <script src="js/map3.js" style="z-index:0"></script>
                     <!-- Minimapa -->
                 <link rel="stylesheet" href="Leaflet-MiniMap-master/Control.MiniMap.css" />
                 <script src="Leaflet-MiniMap-master/Control.MiniMap.js" type="text/javascript"></script>
