--- a/13.html
+++ b/13.html
@@ -30,7 +30,6 @@
 
 
     
-  </style>
 </head>
 <body>
   <div id="map"></div>
@@ -58,19 +57,19 @@
     legend.onAdd = function(map) {
     var div = L.DomUtil.create("div", "legend");
     div.innerHTML = 
-    '<h><b>Comuna 22</b></h>' +
-    '<li>Andrés Vargas Pérez</li>' +
+    '<h1><b>Comuna 22</b></h1>' +
     '<li id="legend-coordinates"></li>' +
     '</ul></p>' +
-    'Creado con Leaflet <br>' +
+    'Creado por Andrés Vargas <br>' +
     'SIG WEB <br>' +
-    '<img src="img/logovalle.png" style="width:70%">';
+    'id="legend-coordinates"'+
+    '<img src="img/logovalle.png" style="width:90%">';
     return div;
     };
 legend.addTo(map)
 function updateLegendCoordinates(e) {
       var legendCoordinates = document.getElementById('legend-coordinates');
-      legendCoordinates.innerHTML = '<strong>Lat: </strong> ' + e.latlng.lat.toFixed(6) + '<strong>  Long:</strong> ' + e.latlng.lng.toFixed(6);
+      legendCoordinates.innerHTML = '<strong>Lat: </strong> ' + e.latlng.lat.toFixed(3) + '<strong>  Long:</strong> ' + e.latlng.lng.toFixed(3);
     }
 
 map.on('mousemove', updateLegendCoordinates);
