--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 
 
     <script src="https://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
-
+    <!-- Easy Button -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.css" />    
 
+    <!-- Localización  -->
     <link rel="stylesheet" href="css/L.Control.Locate.css">
     <script src="Location/L.Control.Locate.js"></script>
 
-
+    <!-- Geocodificador -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
