--- a/13.html
+++ b/13.html
@@ -7,7 +7,7 @@
 
   <style>
     #map {
-      height: 400px;
+      height: 600px;
     }
   </style>
 </head>
@@ -15,13 +15,14 @@
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="grilla/Leaflet.Graticule2.js"></script>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.js"></script>
 
   <script>
     // Crear el mapa
-    var map = L.map('map').setView([51.505, -0.09], 13);
+    var map = L.map('map').setView([3.351602, -76.536017], 14);
 
     // Agregar capa de mapa base
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -29,22 +30,44 @@
       attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
     }).addTo(map);
 
+    
+    var graticule = L.latlngGraticule({
+			showLabel: true,
+			color: '#222',
+			zoomInterval: [
+				{start: 12, end: 13, interval: 0.05},
+				{start: 14, end: 15, interval: 0.025},
+				{start: 16, end: 17, interval: 0.01}
+
+			]
+
+    }).addTo(map);
+      // Crear un botón con Leaflet.EasyButton
+    var graticuleButton = L.easyButton('<img src="img/grilla.png"  align="absmiddle" height="16px" >', function(){
+      if (map.hasLayer(graticule)) {
+        map.removeLayer(graticule);
+      } else {
+        graticule.addTo(map);
+      }
+    }, 'Toggle Graticule').addTo(map);
     // Crear el botón de reinicio
     var resetButton = L.easyButton({
       position:  'bottomleft',
       states: [{
         stateName: 'reset-view',
-        icon: 'fa fa-refresh',
+        icon: '<img src="img/grilla.png"  align="absmiddle" height="16px" >',
         title: 'Reiniciar vista',
         onClick: function(control) {
           // Restablecer la vista del mapa a la posición inicial
-          map.setView([51.505, -0.09], 13);
+          map.setView([3.351602, -76.536017], 14);
         }
       }]
     }).addTo(map);
 
     // Agregar el botón al mapa
     resetButton.addTo(map);
+
+
   </script>
 </body>
 </html>
