--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     '<h><b>Comuna 22</b></h>' +
                     '<li id="legend-coordinates"></li>' +
                     '</ul></p>' +
-                    'Creado con Leaflet <br>' +
+                    'Andrés Vargas <br>' +
                     'SIG WEB <br>' +
                     '<img src="img/logovalle.png" style="width:90%">';
                     return div;
