--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             position:  'topright',
             states: [{
                 stateName: 'reset-view',
-                icon: '<img src="img/SLIDE.png"  align="absmiddle" height="20px" >',
+                icon: '<img src="img/slide.png"  align="absmiddle" height="20px" >',
                 title: 'Reiniciar vista',
                 onClick: function(control) {
                 // Restablecer la vista del mapa a la posición inicial
