--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
           </nav>
         </header>
-    <div class="cajon">
+    <div class="cajon rounded">
         <div id="map" style="z-index:0">
             <img id="norte" src="img/norte2.png" style="z-index:9999">
             
@@ -154,7 +154,19 @@
         map.on('mousemove', updateLegendCoordinates);
 
         </script>
-
+      <div class="map-c text-white">
+        <h1 style="text-align: center;">Mapa de sitios de interés</h1>
+        <h4 style="text-align: center;">Comuna 22</h4>
+        <p style="text-align: justify;">Los sitios de interés son destinos populares que atraen a turistas y contribuyen al turismo de una ciudad. También pueden ser lugares de reunión y esparcimiento para los residentes locales. Estos sitios suelen reflejar la identidad y la historia de la ciudad, y muchos de ellos están asociados con eventos históricos, personajes famosos o características únicas de la localidad.</p>
+        <div class="det"><i class="fa fa-map-marker"></i> <em><strong>Creado por:</strong> Andrés Vargas</em></div>
+        <div class="det"><i class="fa fa-phone"></i> <em>Ingeniería Topográfica </em></div>
+        <div class="det" style="text-align: center;"><i class="fa fa-globe" ></i> Código </div>
+        <center>
+          <p class="lead">
+            <a href="https://github.com/Jandresvargas/ejercicioleaflet" class="btn btn-lg btn-success" style="background-image: url(img/GIT.png);background-repeat: no-repeat; background-size: cover; width: 50px; height: 50px;"> </a>
+          </p>
+        </center>
+      </div>
       </div>
   </body>
 </html>
